Updates and Fixes to console

--- a/Source/Server/apps/mpconsole/templates/base.html
+++ b/Source/Server/apps/mpconsole/templates/base.html
@@ -178,18 +178,11 @@
 						<li id="provisioning">
 							<a href="#"><i class="glyphicon glyphicon-transfer"></i> Provisioning<span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level" id="provisioning_list">
-								<li>
-									<a href="{{ url_for('provision.tasks') }}"><i class="fa fa-archive fa-fw"></i> Software</a>
-								</li>
-								<li>
-									<a href="{{ url_for('provision.scripts') }}"><i class="fa fa-file-code-o fa-fw"></i> Scripts</a>
-								</li>
-								<li>
-									<a href="{{ url_for('provision.uiConfig') }}"><i class="fa fa-sliders fa-fw"></i> UI Config</a>
-								</li>
-								<li>
-									<a href="{{ url_for('provision.criteria') }}"> <i class="fa fa-code-fork fa-fw"></i> Detection Criteria</a>
-								</li>
+								<li><a href="{{ url_for('provision.criteria') }}"> <i class="fa fa-code-fork fa-fw"></i> Detection Criteria</a></li>
+								<li><a href="{{ url_for('provision.scripts') }}"><i class="fa fa-file-code-o fa-fw"></i> Scripts</a></li>
+								<li><a href="{{ url_for('provision.tasks') }}"><i class="fa fa-archive fa-fw"></i> Software</a></li>
+								<li><a href="{{ url_for('provision.uiConfig') }}"><i class="fa fa-sliders fa-fw"></i> UI Config</a></li>
+
 								<!--
 								<li>
 									<a href="{{ url_for('provision.testTask') }}"><i class="fa fa-file-o fa-fw"></i> Test</a>
