--- a/Source/Server/apps/mpconsole/templates/provision/scripts.html
+++ b/Source/Server/apps/mpconsole/templates/provision/scripts.html
@@ -8,7 +8,16 @@
 {%  endblock %}
 
 {% block pageHeader %}
-	Provisioning - Scripts
+<div class="container-fluid">
+	<div class="pull-left">Provisioning - Scripts</div>
+	<div class="pull-right">
+		<button type="button" class="btn btn-primary" data-container="body" data-toggle="popover"
+				data-placement="left"
+				data-content="Provisioning scripts, have two types - Pre and Post. The scripts will run before required software and after required software has been installed.">
+		  <i class="fa fa-question"></i>
+		</button>
+	</div>
+</div>
 {%  endblock %}
 
 {% block bodyPanel %}
@@ -27,6 +36,7 @@
 
 {% block javascript %}
 	{{ super() }}
+	<script src="{{ url_for('static', filename='static_components/popper/popper.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/bootstrap-table/dist/bootstrap-table.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/bootstrap-table/dist/extensions/resizable/bootstrap-table-resizable.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='static_components/bootstrap-table-editable/bootstrap-table-editable.js') }}"></script>
@@ -95,7 +105,10 @@
 
 	$( document ).ready(function()
 	{
-			$('#table').bootstrapTable(
+		$(function () {
+			$('[data-toggle="popover"]').popover()
+		})
+		$('#table').bootstrapTable(
 			{
 				striped: true,
 				pagination: true,
