--- a/Source/Server/apps/mpconsole/templates/provision/software_tasks.html
+++ b/Source/Server/apps/mpconsole/templates/provision/software_tasks.html
@@ -8,7 +8,7 @@
 {%  endblock %}
 
 {% block pageHeader %}
-	Provisioning - Software Tasks
+	Provisioning - Required Software
 {%  endblock %}
 
 {% block bodyPanel %}
