--- a/Source/Server/apps/mpconsole/templates/provision/script_modify.html
+++ b/Source/Server/apps/mpconsole/templates/provision/script_modify.html
@@ -121,9 +121,9 @@
 								<label>Script Type</label>
 							</div>
 							<div class="col-md-5">
-								<select class="form-control" name="active">
-									<option value="1" {% if 1 == data['Script']['type'] %}selected{% endif %}>Pre Software Task Installs</option>
-									<option value="0" {% if 0 == data['Script']['type'] %}selected{% endif %}>Post Software Task Installs</option>
+								<select class="form-control" name="type">
+									<option value="1" {% if 1 == data['Script']['type'] %}selected{% endif %}>Post Software Task Installs</option>
+									<option value="0" {% if 0 == data['Script']['type'] %}selected{% endif %}>Pre Software Task Installs</option>
 								</select>
 							</div>
 						</div>
