--- a/Source/Server/apps/mpconsole/templates/provision/software_task_modify.html
+++ b/Source/Server/apps/mpconsole/templates/provision/software_task_modify.html
@@ -116,6 +116,14 @@
 								</select>
 							</div>
 						</div>
+						<div class="row row-grid top10">
+							<div class="col-md-3">
+								<label>Order</label>
+							</div>
+							<div class="col-md-5">
+								<input class="form-control" type="text" name="order" value="{{data['Task']['order'] or '99'}}">
+							</div>
+						</div>
                         <div class="row row-grid top10">
 							<div class="col-md-3">
 								<label>Active</label>
